# Automating_Equity1_Code

./: .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Flowchart.mmd  Intro_file.qmd  README.md  conda_requirements.txt  environment.yml  fix_list.txt  imported_modules.txt  install_modules.txt  metadata.json  new_processing.ipynb  nohup.out  pip_requirements.txt  pyproject.toml  requirements old.txt  requirements.txt  requirements_cleaned.txt  requirements_surfresearchcloud_cuda11.7.txt  study1.yml  study1_surfresearchcloud_cuda11.7.yml
.devcontainer/: devcontainer.json
1. Cleaning and Preprocessing/: 1. language_detection_preprocessing.ipynb  2. sentences_preprocessing.ipynb  3. tokens_preprocessing.ipynb  4. descriptives_visualization_and_tables.ipynb  4. tagging_lemmatization_stemming_preprocessing.ipynb  5. manual_data_preprocessing copy.ipynb  5. manual_data_preprocessing.ipynb  5. ngrams_preprocessing.ipynb  6. manual_data_descriptives_visualization_and_tables.ipynb  6. sentiment_embeddings_preprocessing.ipynb  6. sentiment_preprocessing.ipynb  7. descriptives_visualization_and_tables.ipynb  7. manual_data_preprocessing.ipynb  8. manual_data_preprocessing.ipynb  9. manual_data_descriptives_visualization_and_tables.ipynb  helper: merging_preprocessing.ipynb  zz. sentences_preprocessing.ipynb
1. Scraping/: README.md
2. Analysis/: 1. supervised_estimators_train_and_evaluate.ipynb  1. train_and_evaluate_estimators.ipynb  2. bert_estimator_train_and_evaluate.ipynb  study1.yml
2. Classification/: 1. supervised_estimators_train_and_evaluate.ipynb  2. bert_estimator_train_and_evaluate.ipynb  TF TEST.ipynb
2. Cleaning and Preprocessing/: 1. language_detection_preprocessing.ipynb  2. sentences_preprocessing.ipynb  3. explode_clean_and_validate.ipynb  3. tokens_preprocessing.ipynb  4. manual_data_preprocessing.ipynb  4. tokens_preprocessing.ipynb  README.md  helper: merging_preprocessing.ipynb  helper_to_merging_preprocessing.ipynb
2. Trainning and Classification/: 0. FULL_supervised_estimators_train copy.ipynb  0. supervised_estimators_train.ipynb  (+52 more)
Analysis OLD/: IR.py  (+11 more)
(+865 files in other folders)
