[tool.poetry]
name = "study1-code"
version = "0.1.0"
description = ""
authors = ["Noon Abdulqadir (MFA Noon) <noon.abdulqadir@gmail.com>"]
readme = "README.md"
packages = [{include = "study1_code"}]

[tool.poetry.dependencies]
python = "^3.10"
pip = "^23.0.1"
ipython = "^8.12.0"
ipywidgets = "^8.0.6"
ipykernel = "^6.22.0"
jupyter = "^1.0.0"
mypy = "^1.1.1"
autopep8 = "^2.0.2"
pylint = "^2.17.1"
pre-commit = "^3.2.1"
python-dotenv = "^1.0.0"
ipympl = "^0.9.3"
spacy = "^3.5.1"
gensim = "^4.3.1"
imbalanced-learn = "^0.10.1"
matplotlib = "^3.7.1"
nltk = "^3.8.1"
openpyxl = "^3.1.2"
xlsxwriter = "^3.0.9"
selenium = "^4.8.3"
statsmodels = "^0.13.5"
xgboost = "^1.7.5"
pyarrow = "^11.0.0"
statannotations = "^0.5.0"
langdetect = "^1.0.9"
textblob = "^0.17.1"
webdriver-manager = "^3.8.5"
transformers = "^4.27.4"
accelerate = "^0.18.0"
cbsodata = "^1.3.4"
simpledorff = "^0.0.2"
http-request-randomizer = "^1.3.2"
specification-curve = "^0.3.1"
plot-metric = "^0.0.6"
googletrans = "4.0.0-rc1"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl"}
torch = {url = "https://download.pytorch.org/whl/nightly/cpu/torch-2.0.0.dev20230130-cp310-none-macosx_11_0_arm64.whl"}
torchaudio = {url = "https://download.pytorch.org/whl/nightly/cpu/torchaudio-2.0.0.dev20230202-cp38-cp38-macosx_11_0_arm64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/nightly/cpu/torchvision-0.15.0.dev20230201-cp310-cp310-macosx_11_0_arm64.whl"}
poetry = "1.4.0"

[installer]
modern-installation = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
